RESOLVED FIXED44276
Can't click play button in vimeo.com Flash video player in WebKit2 on Windows
https://bugs.webkit.org/show_bug.cgi?id=44276
Summary Can't click play button in vimeo.com Flash video player in WebKit2 on Windows
Adam Roben (:aroben)
Reported 2010-08-19 10:54:00 PDT
Can't click play button in vimeo.com Flash video player in WebKit2 on Windows
Attachments
Patch (4.92 KB, patch)
2010-08-19 10:56 PDT, Adam Roben (:aroben)
sam: review+
Adam Roben (:aroben)
Comment 1 2010-08-19 10:56:06 PDT
Adam Roben (:aroben)
Comment 2 2010-08-19 11:06:52 PDT
Adam Roben (:aroben)
Comment 3 2010-08-19 14:27:57 PDT
Note You need to log in before you can comment on or make changes to this bug.