Send mouse events to windowless plugins on Windows

This seems to have been the last issue blocking us from playing videos
on vimeo.com.

Fixes <http://webkit.org/b/44276> <rdar://problem/8330398> Can't click
play button in vimeo.com Flash video player in WebKit2 on Windows

Reviewed by Sam Weinig.

* WebProcess/Plugins/Netscape/win/NetscapePluginWin.cpp:
(WebKit::toNP): Added. Converts a WebMouseEvent to an NPEvent. Code
was adapted from WebCore's PluginViewWin.cpp.

(WebKit::NetscapePlugin::platformHandleMouseEvent):
(WebKit::NetscapePlugin::platformHandleMouseEnterEvent):
(WebKit::NetscapePlugin::platformHandleMouseLeaveEvent):
Convert the WebMouseEvent to an NPEvent and send it to the plugin.

Canonical link: https://commits.webkit.org/56486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65706 268f45cc-cd09-0410-ab3c-d52691b4dbfc